# googler_jarun

./: CLAUDE.md  pyproject.toml
claudedocs/dev_diary/: dev_diary_2026-02-14.md
claudedocs/plans/: python-api-design.md
googler_api/: __init__.py  _compat.py  client.py  connection.py  exceptions.py  models.py  url_builder.py
tests/test_api/: test_client.py  test_models.py
